all working (added prices on products labels), also added frame for expired products (empty frame)